syntax = "proto3";

package dataservice.v1;

import "google/protobuf/timestamp.proto";
import "google/api/field_behavior.proto";

// represents the file info
message FileInfo {
  string id = 1;

  string name = 2;
  uint32 size = 3;
  string source = 4;
  string sourceType = 5;

  string checksum = 10;
  string mimeType = 11;

  google.protobuf.Timestamp created_at = 15 [(google.api.field_behavior) = OUTPUT_ONLY];
  google.protobuf.Timestamp updated_at = 16 [(google.api.field_behavior) = OUTPUT_ONLY];
  google.protobuf.Timestamp deleted_at = 17 [(google.api.field_behavior) = OUTPUT_ONLY];

  map<string,string> metadata = 20;
}
